[package]
name = "lines-rs"
version = "0.1.1"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "⚡ A fast line counter written in rust"

[[bin]]
name = "lines"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bytecount = "0.6.2"
num_cpus = "1.13.0"
rayon = "1.5.0"